# CW_Parallel_Computing

./: .gitignore  CMakeLists.txt
Src/Client/: SearchClient.cpp  SearchClient.h  SearchResultPrinter.cpp  SearchResultPrinter.h  main.cpp
Src/Server/: Document.cpp  Document.h  DocumentReader.cpp  DocumentReader.h  FileWatcher.cpp  FileWatcher.h  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp  SearchServer.h  ThreadPool.cpp  ThreadPool.h  main.cpp
